<?xml version="1.0"?>
<package format="2">
  <name>ardent_state_simple</name>
  <version>0.0.0</version>
  <description>The ardent_states package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nathan@todo.todo">nathan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ardent_description_simple</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>urdf</build_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>ardent_description_simple</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <depend>eigen</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export> 

  </export> -->
</package>
